--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,10 @@ mock>=2.0.0
 PyDOE >= 0.3.0
 sobol_seq >=0.1
 emcee==2.2.1
+pandas>=1.0.5
+seaborn>=0.10.1
+python-ternary>=1.0.7
+
 
 # For tests
 nose
