--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ six>=1.10.0
 python-dateutil>=2.6.0
 paramz>=0.7.0
 GPy>=1.8
-matplotlib>=1.5.3
+matplotlib>=1.5.3, <=3.1.3
 #pyparsing==2.1.10
 #pytz==2016.7
-scipy>=0.18.1
+scipy>=0.18.1, <=1.4.1
 mock>=2.0.0
 PyDOE >= 0.3.0
 sobol_seq >=0.1
